--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -7,6 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
