feat: add minifier html to minifier command line

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -16,5 +16,23 @@
       </ul>
     </nav>
   </header>
+
+  <section>
+    <article>
+      <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aliquid hic dicta. Illo velit ipsa ad expedita! Tempora, obcaecati quaerat.</p>
+      </div>
+    </article>
+    <article>
+      <div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores nisi placeat at fugiat iusto quas voluptas, illum nulla cum omnis!</p>
+      </div>
+    </article>
+    <article>
+      <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita corporis fugiat consectetur debitis distinctio accusantium delectus itaque natus esse at.</p>
+      </div>
+    </article>
+  </section>
 </body>
 </html>
