feat: add test for html minifier

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -34,5 +34,29 @@
       </div>
     </article>
   </section>
+
+  <footer>
+    <div>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
