--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -1,55 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section>
-    <article>
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aliquid hic dicta. Illo velit ipsa ad expedita! Tempora, obcaecati quaerat.</p>
-      </div>
-    </article>
-    <article>
-      <div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores nisi placeat at fugiat iusto quas voluptas, illum nulla cum omnis!</p>
-      </div>
-    </article>
-    <article>
-      <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita corporis fugiat consectetur debitis distinctio accusantium delectus itaque natus esse at.</p>
-      </div>
-    </article>
-  </section>
-
-  <footer>
-    <div>
-      <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-      </ul>
-    </div>
-    <div>
-      <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-      </ul>
-    </div>
-  </footer>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Document</title></head><body><header><nav><ul><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li></ul></nav></header><section><article><div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aliquid hic dicta. Illo velit ipsa ad expedita! Tempora, obcaecati quaerat.</p></div></article><article><div><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores nisi placeat at fugiat iusto quas voluptas, illum nulla cum omnis!</p></div></article><article><div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita corporis fugiat consectetur debitis distinctio accusantium delectus itaque natus esse at.</p></div></article></section><footer><div><ul><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li></ul></div><div><ul><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li></ul></div></footer></body></html>
