--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> <!-- comment inline -->
-</head>
-<body>
-    <!-- header -->
-    <header>
-        <!-- 
-            nvigation bar 
-            with link 
-        -->
-        <nav>
-            <ul>
-                <!-- <li class="list"><a href="" class="link"></a></li>
-                <li class="list"><a href="" class="link"></a></li> -->
-                <li class="list"><a href="" class="link"></a></li>
-                <li class="list"><a href="" class="link"></a></li>
-                <li class="list"><a href="" class="link"></a></li>
-                <li class="list"><a href="" class="link"></a></li>
-            </ul>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod temporibus 
-                fugit quasi enim dolor eius vitae delectus quibusdam molestias odio sunt 
-                nisi consectetur vero sit magnam ex, veritatis est explicabo.
-            </p>
-        </nav>
-    </header>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Document</title></head><body> <header><nav><ul><li class="list"><a href="" class="link"></a></li><li class="list"><a href="" class="link"></a></li><li class="list"><a href="" class="link"></a></li><li class="list"><a href="" class="link"></a></li></ul><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod temporibus fugit quasi enim dolor eius vitae delectus quibusdam molestias odio sunt nisi consectetur vero sit magnam ex, veritatis est explicabo.</p></nav></header></body></html>
